Correctly align vertically

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -83,8 +83,8 @@
 // related datasets______
 .related-datasets {
   padding-left: 25px;
-  h3:first-of-type {
-    margin-top: 134px;
+  h3.top {
+    margin: 0;
     padding-top: 30px;
     border-top: 10px solid #F8F8F8;
   }
